--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "compile-sass": "node-sass src/assets/sass/App.scss src/assets/css/App.css",
+    "minify-sass": "node-sass src/assets/sass/App.scss src/assets/css/App.css --output-style compressed",
+    "watch": "node-sass --output-style --watch  src/assets/sass/App.scss src/assets/css/App.css true"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,5 +47,13 @@
   "devDependencies": {},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Solaiman0168/wms-react-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Solaiman0168/wms-react-template/issues"
+  },
+  "homepage": "https://github.com/Solaiman0168/wms-react-template#readme"
 }
