--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "google-map-react": "^2.1.9",
     "i": "^0.3.6",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
